[RWM][RecentlyClosed] Clear old TabRestoreService entries
The CL updates getRecentlyClosedTabsAndWindows() to clear tab event
entries older than six months. Note that the trigger point of the
cleanup is dependent on a request to get the list of aggregated entries,
and updating an already open Recent Tabs page real-time is out of scope
for this update, because there is no objective app trigger point to
detect retention period expiration.

Bug: 480756162
Change-Id: Id1ee2f71e0ef68ff360a5433f56245344116e522
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7537451
Reviewed-by: Zhe Li <zheliooo@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Commit-Queue: Aishwarya Rajesh <aishwaryarj@google.com>
Cr-Commit-Position: refs/heads/main@{#1579575}